1604 - Fixed filter dropdown trigger icon was not aligning with datagrid

--- a/src/components/datagrid/_datagrid.scss
+++ b/src/components/datagrid/_datagrid.scss
@@ -3648,6 +3648,7 @@ html[dir='rtl'] {
   .trigger .icon {
     height: 24px;
     left: 4px;
+    top: 0;
     width: 16px;
   }
 
